Fixed spacing issues between sections for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -388,6 +388,7 @@ font-size: 1.5rem
     border-right: none;
     margin-bottom: 3rem;
     margin-right: 0;
+    padding-bottom: 1rem;
     padding-right: 0
 }
 }
@@ -453,6 +454,7 @@ transform: translateY(-1rem)
       border-right: none;
       margin-bottom: 3rem;
       margin-right: 0;
+      padding-bottom: 1rem;
       padding-right: 0
   }
   }
@@ -604,8 +606,8 @@ width: 19rem
 @media (max-width: 1020px) {
   .img-side span img {
       width: 38rem;
-      top: -55px; 
-      left: -100px; 
+      top: -55px; /* Ajustar según sea necesario para pantallas más pequeñas */
+      left: -100px; /* Ajustar según sea necesario para pantallas más pequeñas */
   }
 }
 
